# robotic

./: .gitignore  .gitmodules  README.md
ai/: README.md
ai/pytorch/: SaveModel.py  hello.py
cpp/: Input_output.cpp  Namespace.cpp  Preprocessors.cpp  READMD.md  array.cpp  control.cpp  data_type.cpp  enum.cpp  exception.cpp  file.cpp  function.cpp  function_Lambda.cpp  function_arguments.cpp  function_inline.cpp  function_parameter.cpp  hello_world.cpp  iterators.cpp  memory_dynamic.cpp  memory_leak.cpp  oop_object.cpp  operators.cpp  pointers.cpp  pointers_references.cpp  sample.txt  stl_binary_search.cpp  stl_deque.cpp  stl_list.cpp  stl_map.cpp  stl_multiset.cpp  stl_queue.cpp  stl_set.cpp  stl_sort.cpp  stl_vector.cpp  string.cpp  struct.cpp  struct_typedef.cpp  templates_class.cpp  templates_function.cpp  union.cpp
cpp/advanced/: Generics.cpp  Multithreading.cpp  SmartPointer.cpp  callback_function.cpp  callback_function_2.cpp  callback_function_3.cpp  single_handling.cpp  this.cpp
cpp/class/: MyClass.cpp  MyClass.h  READMD.md  main  main.cpp
hello/hello-ceres-solver/: CMakeLists.txt
hello/hello-eigen/: CMakeLists.txt  main.cpp
hello/hello-fmt/: CMakeLists.txt  README.md  main.cpp
hello/hello-g2o/: CMakeLists.txt  main.cpp
hello/hello-opencv/: CMakeLists.txt
hello/hello-pcl/: CMakeLists.txt  pcd_write.cpp
hello/hello-sophus/: CMakeLists.txt  READMD.md  useSophus.cpp
linux/: README.md
matplotlib/: Intro.ipynb
matplotlib/.ipynb_checkpoints/: 3dplot-checkpoint.py
opencv/core_module/: AddingImages.cpp  changing_contrast_brightness.cpp  discrete_fourier_transform.cpp  file_input_output.cpp  how_to_scan_images.cpp  how_to_use_OpenCV_parallel_for_.cpp  mat_mask_operations.cpp  mat_operations.cpp  mat_the_basic_image_container.cpp
opencv/cuda_module/: alpha_comp.cpp
opencv/dnn_module/: Load_Caffe.cpp
opencv/feature2d_module/: Detecting_corners_location_subpixels.cpp  Feature_Detection.cpp  Harris_corner_detector.cpp  SURF_detection_Demo.cpp  Shi-Tomasi_corner_detector.cpp  own_corner_detector.cpp
opencv/hello/: CMakeLists.txt  main.cpp
opencv/highgui_module/: AddingImagesTrackbar.cpp  BasicLinearTransformsTrackbar.cpp
opencv/imgcodecs_module/: gdal-image.cpp
opencv/imgproc_module/: Affine_Transformations.cpp  BasicLinearTransforms.cpp  BoundingBox.cpp  Canny.cpp  Convex_Hull.cpp  Drawing_1.cpp  Eroding_Dilating.cpp  Histogram.cpp  HitMiss.cpp  (+15 more)
python/: DataType.py  Dictionary.py  Set.py  Tuple.py  comment.py  list.py  opencv.py  operator2.py  operator4.py
pytorch/: RAEDME.md  hello.py
slam/slambook2/ch5/stereo/: CMakeLists.txt
(+103 files in other folders)
